Fix number newline wrapping

--- a/home-screen1691.css
+++ b/home-screen1691.css
@@ -61,10 +61,10 @@
 .home-screen1691-contactsblock {
   bottom: 0px;
   width: 100%;
-  max-width: 600px;
+  max-width: 700px;
   left: 0px;
   right: 0px;
-  height: 53px;
+  height: 110px;
   margin: auto;
   display: flex;
   padding: 20px;
